unpackaged/main/default/objects/Entitlement_Promotion__c/Entitlement_Promotion__c.object-meta.xml
<CustomObject>
    <label>Entitlement Promotion</label>
    <nameField>
        <label>Entitlement Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitlement Promotion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>