unpackaged/main/default/objects/Entitlement_Promotion__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Denotes the percentage of discount on the line item that has the related promo mechanic applied</description>
    <inlineHelpText>Denotes the percentage of discount on the line item that has the related promo mechanic applied</inlineHelpText>
    <label>Discount %</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>