unpackaged/main/default/objects/Entitlement_Promotion__c/fields/Discount_Cap__c.field-meta.xml
<CustomField>
    <fullName>Discount_Cap__c</fullName>
    <description>Denotes the maximum discount that can be given when applied to a basket/quote</description>
    <inlineHelpText>Denotes the maximum discount that can be given when applied to a basket/quote</inlineHelpText>
    <label>Discount Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>