unpackaged/main/default/objects/Entitlement_Promotion__c/fields/Discount_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Discount_per_unit__c</fullName>
    <description>Denotes the amount given as per unit discount on the line item that has related promo mechanic applied</description>
    <inlineHelpText>Denotes the amount given as per unit discount on the line item that has related promo mechanic applied</inlineHelpText>
    <label>Discount Per Unit</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>