unpackaged/main/default/objects/Entitlement_Promotion__c/fields/Discounted_amt__c.field-meta.xml
<CustomField>
    <fullName>Discounted_amt__c</fullName>
    <description>Denotes the amount given as flat discount on the line item that has related promo mechanic applied</description>
    <inlineHelpText>Denotes the amount given as flat discount on the line item that has related promo mechanic applied</inlineHelpText>
    <label>Total Discount per line item</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>