unpackaged/main/default/objects/Entitlement_Promotion__c/fields/Duration_Term__c.field-meta.xml
<CustomField>
    <fullName>Duration_Term__c</fullName>
    <label>Duration Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>