unpackaged/main/default/objects/Entitlement_Promotion__c/fields/Entitlement_Product__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the product that is given as entitlement or bonus</description>
    <inlineHelpText>Denotes the product that is given as entitlement or bonus</inlineHelpText>
    <label>Entitlement Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Entitlement Promotion</relationshipLabel>
    <relationshipName>Entitlement_Product_del</relationshipName>
    <type>Lookup</type>
</CustomField>