unpackaged/main/default/objects/Entitlement_Promotion__c/fields/Is_Promo_Start_Date_Editable__c.field-meta.xml
<CustomField>
    <fullName>Is_Promo_Start_Date_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Check Box is used for make the start date of promo product editable</description>
    <label>Untag Promo Start Date to Eligible pdt</label>
    <type>Checkbox</type>
</CustomField>