unpackaged/main/default/objects/Entitlement_Promotion__c/fields/Promo_Mechanic__c.field-meta.xml
<CustomField>
    <fullName>Promo_Mechanic__c</fullName>
    <description>Denotes the related promo mechanic of this entitlement Promotion</description>
    <inlineHelpText>Denotes the related promo mechanic of this entitlement Promotion</inlineHelpText>
    <label>Promo Mechanic</label>
    <referenceTo>Promo_Mechanic__c</referenceTo>
    <relationshipName>Entitlement_Product</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>