unpackaged/main/default/objects/Entitlement_Promotion__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Denotes the quantity product given as entitlement or bonus</description>
    <inlineHelpText>Denotes the quantity product given as entitlement or bonus</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>