unpackaged/main/default/objects/Entitlement_Promotion__c/validationRules/Currency_equal_to_Campaign_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>Currency_equal_to_Campaign_Currency</fullName>
    <active>true</active>
    <description>Entitlement Promotion Currency should be equal to Campaign currency.</description>
    <errorConditionFormula>TEXT(CurrencyIsoCode) &lt;&gt;  TEXT(Promo_Mechanic__r.Campaign_Eligibility__r.Campaign__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency should be equal to Campaign currency.</errorMessage>
</ValidationRule>