unpackaged/main/default/objects/Entitlement_Promotion__c/validationRules/Discount_Per_Must_Be_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Per_Must_Be_Valid</fullName>
    <active>true</active>
    <description>Discount % must be positive 0 &lt; x &lt;= 100%.</description>
    <errorConditionFormula>AND(
!ISBLANK( Discount__c),
OR( 
Discount__c &lt;= 0, 
Discount__c &gt; 1 
)
)</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Discount % must lie between 0 and 100.</errorMessage>
</ValidationRule>