unpackaged/main/default/objects/Entitlement_Promotion__c/validationRules/Quantity_is_zero_or_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_is_zero_or_negative</fullName>
    <active>true</active>
    <description>If Quantity is populated, cannot be 0 or negative.</description>
    <errorConditionFormula>AND(
!ISBLANK(Quantity__c), 
Quantity__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity cannot be zero or negative.</errorMessage>
</ValidationRule>