unpackaged/main/default/objects/Entitlement_Promotion__c/validationRules/Validate_Blank_Entitlement.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Blank_Entitlement</fullName>
    <active>true</active>
    <description>Throw error when Discount, Discount Amount, Discount Per Unit, Product, all four blank.</description>
    <errorConditionFormula>AND(
ISBLANK(Discount__c),
ISBLANK(Discounted_amt__c),
ISBLANK(Discount_per_unit__c),
ISBLANK(Entitlement_Product__c),
Promo_Mechanic__r.Campaign_Eligibility__r.Campaign__r.RecordType.DeveloperName = &quot;Marketing_Promo&quot;
)</errorConditionFormula>
    <errorMessage>Please fill either Discount % or Total Discount per line item or Discount Per Unit or Entitlement Product.</errorMessage>
</ValidationRule>